Compute Cosine similarity

--- a/offline RAG Evaluation.ipynb
+++ b/offline RAG Evaluation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,16 +711,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{0: {'answer_llm': 'NONE',\n",
+       "  'answer_orig': 'Machine Learning Zoomcamp FAQ\\nThe purpose of this document is to capture frequently asked technical questions.\\nWe did this for our data engineering course and it worked quite well. Check this document for inspiration on how to structure your questions and answers:\\nData Engineering Zoomcamp FAQ\\nIn the course GitHub repository there’s a link. Here it is: https://airtable.com/shryxwLd0COOEaqXo\\nwork',\n",
+       "  'document': '0227b872',\n",
+       "  'question': 'Where can I sign up for the course?',\n",
+       "  'course': 'machine-learning-zoomcamp'},\n",
+       " 1: {'answer_llm': 'NONE',\n",
+       "  'answer_orig': 'Machine Learning Zoomcamp FAQ\\nThe purpose of this document is to capture frequently asked technical questions.\\nWe did this for our data engineering course and it worked quite well. Check this document for inspiration on how to structure your questions and answers:\\nData Engineering Zoomcamp FAQ\\nIn the course GitHub repository there’s a link. Here it is: https://airtable.com/shryxwLd0COOEaqXo\\nwork',\n",
+       "  'document': '0227b872',\n",
+       "  'question': 'Can you provide a link to sign up?',\n",
+       "  'course': 'machine-learning-zoomcamp'},\n",
+       " 2: {'answer_llm': 'NONE',\n",
+       "  'answer_orig': 'Machine Learning Zoomcamp FAQ\\nThe purpose of this document is to capture frequently asked technical questions.\\nWe did this for our data engineering course and it worked quite well. Check this document for inspiration on how to structure your questions and answers:\\nData Engineering Zoomcamp FAQ\\nIn the course GitHub repository there’s a link. Here it is: https://airtable.com/shryxwLd0COOEaqXo\\nwork',\n",
+       "  'document': '0227b872',\n",
+       "  'question': 'Is there an FAQ for this Machine Learning course?',\n",
+       "  'course': 'machine-learning-zoomcamp'},\n",
+       " 3: {'answer_llm': 'NONE',\n",
+       "  'answer_orig': 'Machine Learning Zoomcamp FAQ\\nThe purpose of this document is to capture frequently asked technical questions.\\nWe did this for our data engineering course and it worked quite well. Check this document for inspiration on how to structure your questions and answers:\\nData Engineering Zoomcamp FAQ\\nIn the course GitHub repository there’s a link. Here it is: https://airtable.com/shryxwLd0COOEaqXo\\nwork',\n",
+       "  'document': '0227b872',\n",
+       "  'question': 'Does this course have a GitHub repository for the sign-up link?',\n",
+       "  'course': 'machine-learning-zoomcamp'},\n",
+       " 4: {'answer_llm': 'You can structure your questions and answers for the course in any language, but it is not advisable to do the course in languages other than Python due to specific requirements and peer review considerations.',\n",
+       "  'answer_orig': 'Machine Learning Zoomcamp FAQ\\nThe purpose of this document is to capture frequently asked technical questions.\\nWe did this for our data engineering course and it worked quite well. Check this document for inspiration on how to structure your questions and answers:\\nData Engineering Zoomcamp FAQ\\nIn the course GitHub repository there’s a link. Here it is: https://airtable.com/shryxwLd0COOEaqXo\\nwork',\n",
+       "  'document': '0227b872',\n",
+       "  'question': 'How can I structure my questions and answers for the course?',\n",
+       "  'course': 'machine-learning-zoomcamp'}}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,10 +755,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: wget\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: wget\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download the full results with gpt-4o\n",
+    "!wget r'https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/refs/heads/main/04-monitoring/data/results-gpt4o.csv'\n",
+    "# Download the full results with gpt-3.5\n",
+    "!wget r'https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/refs/heads/main/04-monitoring/data/results-gpt35.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the llm and actual answers from gpt4o\n",
+    "base_url = 'https://github.com/DataTalksClub/llm-zoomcamp/blob/main'\n",
+    "relative_url = '04-monitoring/data/results-gpt4o.csv'\n",
+    "results_gpt4o_url = f'{base_url}/{relative_url}?raw=1'\n",
+    "\n",
+    "df_results_gpt4o = pd.read_csv(results_gpt4o_url)\n",
+    "results_gpt4o = df_results_gpt4o.to_dict(orient='records')\n",
+    "\n",
+    "# Load the llm and actual answers from gpt35\n",
+    "base_url = 'https://github.com/DataTalksClub/llm-zoomcamp/blob/main'\n",
+    "relative_url = '04-monitoring/data/results-gpt35.csv'\n",
+    "results_gpt35_url = f'{base_url}/{relative_url}?raw=1'\n",
+    "\n",
+    "df_results_gpt35 = pd.read_csv(results_gpt35_url)\n",
+    "results_gpt35 = df_results_gpt35.to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'answer_llm': 'Yes, sessions are recorded, so you won’t miss anything if you miss a session. You can view the recordings later. Additionally, you can ask questions for office hours in advance or on Slack, and they will be addressed during the live stream or in the Slack channel.', 'answer_orig': 'Everything is recorded, so you won’t miss anything. You will be able to ask your questions for office hours in advance and we will cover them during the live stream. Also, you can always ask questions in Slack.', 'document': '5170565b', 'question': 'Are sessions recorded if I miss one?', 'course': 'machine-learning-zoomcamp'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7962799"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the cosine similarity for one record\n",
+    "record = results_gpt4o[10]\n",
+    "# Extract the two answers to compare\n",
+    "answer_llm = record['answer_llm']\n",
+    "answer_orig = record['answer_orig']\n",
+    "# Create the embeddings for the two answers\n",
+    "v_llm = model.encode(answer_llm)\n",
+    "v_orig = model.encode(answer_orig)\n",
+    "# Calculate the cosine similarity\n",
+    "print(record)\n",
+    "v_llm.dot(v_orig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the function to calculate cosine similarity\n",
+    "def compute_similarity(record):\n",
+    "    # Extract the two answers to compare\n",
+    "    answer_llm = record['answer_llm']\n",
+    "    answer_orig = record['answer_orig']\n",
+    "    # Create the embeddings for the two answers\n",
+    "    v_llm = model.encode(answer_llm)\n",
+    "    v_orig = model.encode(answer_orig)\n",
+    "    # Calculate the cosine similarity\n",
+    "    return v_llm.dot(v_orig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create similarities for all records of the gpt4oresults\n",
+    "similarities_4o = [compute_similarity(record) for record in results_gpt4o]\n",
+    "# Save the similarities in the results\n",
+    "df_results_gpt4o['cosine'] = similarities_4o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1830.000000\n",
+       "mean        0.679129\n",
+       "std         0.217995\n",
+       "min        -0.153425\n",
+       "25%         0.591460\n",
+       "50%         0.734788\n",
+       "75%         0.835390\n",
+       "max         0.995338\n",
+       "Name: cosine, dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculare the descriptive statistics for the similarities\n",
+    "df_results_gpt4o['cosine'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create similarities for all records of the gpt4oresults\n",
+    "similarities_35 = [compute_similarity(record) for record in results_gpt35]\n",
+    "# Save the similarities in the results\n",
+    "df_results_gpt35['cosine'] = similarities_35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1830.000000\n",
+       "mean        0.657599\n",
+       "std         0.226062\n",
+       "min        -0.168921\n",
+       "25%         0.546504\n",
+       "50%         0.714783\n",
+       "75%         0.817262\n",
+       "max         1.000000\n",
+       "Name: cosine, dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculare the descriptive statistics for the similarities\n",
+    "df_results_gpt35['cosine'].describe()"
+   ]
   }
  ],
  "metadata": {
