Evaluate RAG using LLM as a Judge

--- a/offline RAG Evaluation.ipynb
+++ b/offline RAG Evaluation.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluate the RAG system\n",
+    "# Evaluate the RAG system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate using similarity metrics\n",
     "\n",
     "To evaluate the LLM answer we will follow the below steps:\n",
     "- In the ground truth dataset we have a user question along with the actual answer of this question from the FAQ document\n",
@@ -15,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +33,8 @@
     "from tqdm.auto import tqdm\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import os\n",
+    "import json"
    ]
   },
   {
@@ -958,6 +966,354 @@
    "source": [
     "# Calculare the descriptive statistics for the similarities\n",
     "df_results_gpt35['cosine'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate using LLM-as-a-Judge\n",
+    "\n",
+    "To evaluate the LLM answer we will follow the below steps:\n",
+    "- In the ground truth dataset we have a user question along with the actual answer of this question from the FAQ document\n",
+    "- Pass each question of the ground truth dataset to the RAG sytem to get the LLM answer of that question\n",
+    "- Offline Evaluation -> Create a prompt for an LLM to evaluate the generated and original answer and see if it's relevant based also on the generated answer \n",
+    "- Online Evaluation -> Create a prompt for an LLM to evaluate the generated answer and see if it's relevant based also on the generated answer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creation of the two new prompts\n",
+    "\n",
+    "# Offline prompt template\n",
+    "offline_prompt_template = \"\"\"\n",
+    "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+    "Your task is to analyze the relevance of the generated answer compared to the original answer provided.\n",
+    "Based on the relevance and similarity of the generated answer to the original answer, you will classify\n",
+    "it as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+    "\n",
+    "Here is the data for evaluation:\n",
+    "\n",
+    "Original Answer: {answer_orig}\n",
+    "Generated Question: {question}\n",
+    "Generated Answer: {answer_llm}\n",
+    "\n",
+    "Please analyze the content and context of the generated answer in relation to the original\n",
+    "answer and provide your evaluation in parsable JSON without using code blocks:\n",
+    "\n",
+    "{{\n",
+    "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+    "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+    "}}\n",
+    "\"\"\".strip()\n",
+    "\n",
+    "# Online prompt template\n",
+    "online_prompt_template = \"\"\"\n",
+    "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+    "Your task is to analyze the relevance of the generated answer to the given question.\n",
+    "Based on the relevance of the generated answer, you will classify it\n",
+    "as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+    "\n",
+    "Here is the data for evaluation:\n",
+    "\n",
+    "Question: {question}\n",
+    "Generated Answer: {answer_llm}\n",
+    "\n",
+    "Please analyze the content and context of the generated answer in relation to the question\n",
+    "and provide your evaluation in parsable JSON without using code blocks:\n",
+    "\n",
+    "{{\n",
+    "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+    "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+    "}}\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>answer_llm</th>\n",
+       "      <th>answer_orig</th>\n",
+       "      <th>document</th>\n",
+       "      <th>question</th>\n",
+       "      <th>course</th>\n",
+       "      <th>cosine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>The syntax for using `precision_recall_fscore_...</td>\n",
+       "      <td>Scikit-learn offers another way: precision_rec...</td>\n",
+       "      <td>403bbdd8</td>\n",
+       "      <td>What is the syntax for using precision_recall_...</td>\n",
+       "      <td>machine-learning-zoomcamp</td>\n",
+       "      <td>0.881816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1662</th>\n",
+       "      <td>To avoid pickle errors when using waitress, yo...</td>\n",
+       "      <td>When running a docker container with waitress ...</td>\n",
+       "      <td>236864c2</td>\n",
+       "      <td>How should I modify my scripts to avoid pickle...</td>\n",
+       "      <td>machine-learning-zoomcamp</td>\n",
+       "      <td>0.742705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>834</th>\n",
+       "      <td>To launch a container image in interactive mod...</td>\n",
+       "      <td>Launch the container image in interactive mode...</td>\n",
+       "      <td>63a81b57</td>\n",
+       "      <td>What command launches a container image in int...</td>\n",
+       "      <td>machine-learning-zoomcamp</td>\n",
+       "      <td>0.841399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>Yes, you can make a pull request for homework ...</td>\n",
+       "      <td>Pytorch is also a deep learning framework that...</td>\n",
+       "      <td>c4ff26e5</td>\n",
+       "      <td>Can we make a pull request for homework soluti...</td>\n",
+       "      <td>machine-learning-zoomcamp</td>\n",
+       "      <td>0.701560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1323</th>\n",
+       "      <td>The pip version error in this week's serverles...</td>\n",
+       "      <td>When running docker build -t dino-dragon-model...</td>\n",
+       "      <td>42c09143</td>\n",
+       "      <td>What might be the cause of the pip version err...</td>\n",
+       "      <td>machine-learning-zoomcamp</td>\n",
+       "      <td>0.303531</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             answer_llm  \\\n",
+       "726   The syntax for using `precision_recall_fscore_...   \n",
+       "1662  To avoid pickle errors when using waitress, yo...   \n",
+       "834   To launch a container image in interactive mod...   \n",
+       "1234  Yes, you can make a pull request for homework ...   \n",
+       "1323  The pip version error in this week's serverles...   \n",
+       "\n",
+       "                                            answer_orig  document  \\\n",
+       "726   Scikit-learn offers another way: precision_rec...  403bbdd8   \n",
+       "1662  When running a docker container with waitress ...  236864c2   \n",
+       "834   Launch the container image in interactive mode...  63a81b57   \n",
+       "1234  Pytorch is also a deep learning framework that...  c4ff26e5   \n",
+       "1323  When running docker build -t dino-dragon-model...  42c09143   \n",
+       "\n",
+       "                                               question  \\\n",
+       "726   What is the syntax for using precision_recall_...   \n",
+       "1662  How should I modify my scripts to avoid pickle...   \n",
+       "834   What command launches a container image in int...   \n",
+       "1234  Can we make a pull request for homework soluti...   \n",
+       "1323  What might be the cause of the pip version err...   \n",
+       "\n",
+       "                         course    cosine  \n",
+       "726   machine-learning-zoomcamp  0.881816  \n",
+       "1662  machine-learning-zoomcamp  0.742705  \n",
+       "834   machine-learning-zoomcamp  0.841399  \n",
+       "1234  machine-learning-zoomcamp  0.701560  \n",
+       "1323  machine-learning-zoomcamp  0.303531  "
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract a sample of the results\n",
+    "df_sample = df_results_gpt4o.sample(n=50, random_state=1)\n",
+    "# Preview the sample\n",
+    "df_sample.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65c42ee34f7342fdac6048fc2bc7e82d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create the offline evaluation process\n",
+    "offline_evaluations = []\n",
+    "\n",
+    "# Convert the samples as a dictionary\n",
+    "samples = df_sample.to_dict(orient='records')\n",
+    "# For each record \n",
+    "for record in tqdm(samples):\n",
+    "    # Create the offline prompt\n",
+    "    prompt = offline_prompt_template.format(**record)\n",
+    "    # Ask the llm to be the judge\n",
+    "    answer = llm(prompt, model='gpt-4o-mini')\n",
+    "    # Parse the response and append it into a list of results\n",
+    "    json_eval = json.loads(answer)\n",
+    "    offline_evaluations.append(json_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RELEVANT           39\n",
+       "PARTLY_RELEVANT     8\n",
+       "NON_RELEVANT        3\n",
+       "Name: Relevance, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Examine how manre relevand documents we have\n",
+    "df_offline_evaluations = pd.DataFrame(offline_evaluations)\n",
+    "df_offline_evaluations.Relevance.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 11, 41]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'answer_llm': \"The pip version error in this week's serverless deep learning section might be due to a version conflict or mismatch with dependencies, particularly with Scikit-Learn. Based on similar FAQ entries, here's a potential cause:\\n\\nWhen running certain commands (e.g., `pipenv shell` followed by `pipenv run gunicorn --bind 0.0.0.0:9696 predict:app`), you might encounter warnings about version clashes, such as trying to unpickle an estimator from different Scikit-Learn versions. This indicates that the versions of Scikit-Learn used during model training and deployment are inconsistent.\\n\\n### Potential Solutions:\\n1. **Ensure Consistent Scikit-Learn Versions:** Ensure that the virtual environment uses the same version of Scikit-Learn that was used during the model training. For example, if the model was trained using Scikit-Learn version 1.1.1, the same version should be installed in the deployment environment.\\n2. **Correct Package Installation Command:** If you face errors while installing specific versions of Scikit-Learn (e.g., `pipenv install sklearn==1.0.2`), use the full package name: `pipenv install scikit-learn==1.0.2`. For homework or specific instructions, ensure the correct version is installed, such as `pipenv install scikit-learn==1.3.1`.\\n\\nIf these steps do not resolve the problem, you might also need to address dependency resolution issues by using `pipenv lock` to fix the dependency files.\",\n",
+       " 'answer_orig': 'When running docker build -t dino-dragon-model it returns the above error\\nThe most common source of this error in this week is because Alex video shows a version of the wheel with python 8, we need to find a wheel with the version that we are working on. In this case python 9. Another common error is to copy the link, this will also produce the same error, we need to download the raw format:\\nhttps://github.com/alexeygrigorev/tflite-aws-lambda/raw/main/tflite/tflite_runtime-2.7.0-cp39-cp39-linux_x86_64.whl\\nPastor Soto',\n",
+       " 'document': '42c09143',\n",
+       " 'question': \"What might be the cause of the pip version error in this week's serverless deep learning section?\",\n",
+       " 'course': 'machine-learning-zoomcamp',\n",
+       " 'cosine': 0.30353105068206787}"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Examine one non-relevant answer\n",
+    "print(list(df_offline_evaluations[df_offline_evaluations['Relevance']=='NON_RELEVANT'].index))\n",
+    "# See the correspoding record\n",
+    "samples[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d228f3e94d94248819a53731b26de24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create the offline evaluation process\n",
+    "online_evaluations = []\n",
+    "\n",
+    "# Convert the samples as a dictionary\n",
+    "samples = df_sample.to_dict(orient='records')\n",
+    "# For each record \n",
+    "for record in tqdm(samples):\n",
+    "    # Create the offline prompt\n",
+    "    prompt = online_prompt_template.format(**record)\n",
+    "    # Ask the llm to be the judge\n",
+    "    answer = llm(prompt, model='gpt-4o-mini')\n",
+    "    # Parse the response and append it into a list of results\n",
+    "    json_eval = json.loads(answer)\n",
+    "    online_evaluations.append(json_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RELEVANT           45\n",
+       "PARTLY_RELEVANT     5\n",
+       "Name: Relevance, dtype: int64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_online_evaluations = pd.DataFrame(online_evaluations)\n",
+    "df_online_evaluations.Relevance.value_counts()"
    ]
   }
  ],
