Adding Hybrid Search

--- a/Evaluation of retrieval methods.ipynb
+++ b/Evaluation of retrieval methods.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3b154058-9e64-4751-8333-aa7abc329554",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d43512c9-18ae-48c1-a8f2-a5008a5896bc",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ca5ea92f-9d8d-498b-8f7b-73214063f537",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5d4e6993-6f1f-4a36-8dc1-6cb442515428",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        " 'id': 'c02e79ef'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "719b590a-d428-4f0a-8e7f-d7c319bc4c5e",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "53d11bd0-c731-48fe-8309-d5763af8d28c",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
        "9  data-engineering-zoomcamp  1f6520ca  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f8bdaa99-79cb-4226-aa6a-99a22cba30fd",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e51900e5-4d14-4f9f-accf-5579933c2ee7",
    "metadata": {},
    "outputs": [],
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1b5ef0af-fc4f-4283-8099-e82d2fb2decf",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "acb5fdca-cb54-46d1-aea5-30e733d93cce",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "43da46ef-26c5-4bed-bd5b-a00aa6b06c41",
    "metadata": {},
    "outputs": [],
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "id": "189c46b5-198f-40de-a8dd-a3b92278a022",
    "metadata": {},
    "outputs": [],
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "02382292",
    "metadata": {},
    "outputs": [],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "cacdb62c-805c-4d7d-8aa4-3fea54cc5659",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
        "384"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,14 +993,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "1cb77f6f-6f40-443f-baa6-c95906f8f14e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "508e8a40ddcd4a6c957fb695c503d611",
+       "model_id": "3227816fc69e4f77bafc11b8ea882409",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1036,17 +1036,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "94800550-3c0c-4843-b569-4772b05bfa6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'vector_questions'})"
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'vector_question'})"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
     "}\n",
     "\n",
     "# Provide the name of the index\n",
-    "index_name = \"vector_questions\"\n",
+    "index_name = \"vector_question\"\n",
     "# Create the elastic search index\n",
     "response = es_client.indices.create(index=index_name, body=index_settings)\n",
     "# Verify that elastic search is created\n",
@@ -1097,14 +1097,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "197a24d4-7c30-4cb7-9d85-7f4026c39190",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ca5ba1fccbf40fcb38b118f004b9c55",
+       "model_id": "a2e23a43133941668dd71a3f8cf4c385",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "id": "55825738-ac85-452a-b62c-c3e4d12b31c4",
    "metadata": {},
    "outputs": [],
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "id": "45ebbfa4-20a8-4218-b8ea-68e545b04698",
    "metadata": {},
    "outputs": [],
@@ -1338,6 +1338,136 @@
    "source": [
     "# Evaluate the vector search in questions and answer of the FAQ\n",
     "evaluate(ground_truth, question_text_vector_knn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b2ed40",
+   "metadata": {},
+   "source": [
+    "## Evaluate hybrid search\n",
+    "\n",
+    "To evaluate the hybrid search we need to follow the following steps:\n",
+    "- Create the embedding of the user query and query the data\n",
+    "- Adjust the search query to use both vector and keyword search\n",
+    "- Add the weight of each method in the query that will contribute to the total score\n",
+    "- Calculate the HR and MRR metrics comparing the retrieved data with the ground truth dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "060d9e78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjusting the ES query for hybrid search\n",
+    "\n",
+    "def elastic_search_hybrid(field, query, vector, course):\n",
+    "    # This is the query for the vector search\n",
+    "    knn_query = {\n",
+    "        \"field\": field,\n",
+    "        \"query_vector\": vector, # This will recieve a vector of the user query\n",
+    "        \"k\": 5,\n",
+    "        \"num_candidates\": 10000,\n",
+    "        \"boost\": 0.5, # Here you can set up the weight the vector search will have in the results\n",
+    "        \"filter\": {\n",
+    "            \"term\": {\n",
+    "                \"course\": course\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    # This is the query for the keyword search\n",
+    "    keyword_query = {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": query, # This will recieve the user query itself\n",
+    "                    \"fields\": [\"question\", \"text\", \"section\"],\n",
+    "                    \"type\": \"best_fields\",\n",
+    "                    \"boost\": 0.5, # Here you can set up the weight the keyword search will have in the results\n",
+    "                }\n",
+    "            },\n",
+    "            \"filter\": {\n",
+    "                \"term\": {\n",
+    "                    \"course\": course\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    # Here is the combination of the two search methods\n",
+    "    search_query = {\n",
+    "        \"knn\": knn_query,\n",
+    "        \"query\": keyword_query,\n",
+    "        \"size\": 5,   # This is the number of the returned documents\n",
+    "        \"_source\": [\"text\", \"section\", \"question\", \"course\", \"id\"] # The fields that will be returned for each retrieved document \n",
+    "    }\n",
+    "\n",
+    "    es_results = es_client.search(\n",
+    "        index=index_name,\n",
+    "        body=search_query\n",
+    "    )\n",
+    "    \n",
+    "    result_docs = []\n",
+    "    \n",
+    "    for hit in es_results['hits']['hits']:\n",
+    "        result_docs.append(hit['_source'])\n",
+    "\n",
+    "    return result_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4213db83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the hybrid search function to use for evaluation\n",
+    "def question_text_search_hybrid(user_query):\n",
+    "    # Extract the text field\n",
+    "    question = user_query['question']\n",
+    "    # Extract keyword for filtering the results\n",
+    "    course = user_query['course']\n",
+    "    # Create the embedding of the user query\n",
+    "    v_q = model.encode(question)\n",
+    "    return elastic_search_hybrid('question_text_vector', question ,v_q, course)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0899eac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3052f696fb14a8b8f676a762d8e3649",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4627 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'hit_rate': 0.9250054030689432, 'mrr': 0.8506231539514445}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the hybrid search in questions and answer of the FAQ\n",
+    "evaluate(ground_truth, question_text_search_hybrid)"
    ]
   }
  ],
